# eindfeest_ECPC

./: README.md  pyproject.toml
labwatching/: pyproject.toml
labwatching/src/labwatching/: chattest.py  examplesNI.py  general_class2.py  general_output.py  gui.py  keypresses.py  labwatching.py  labwatching2daan.py  model_test.py  outputclasschat.py
