[tool.poetry]
name = "labwatching"
version = "0.1.0"
description = ""
authors = ["samrelyveld <samrelyveld@gmail.com>"]
readme = "README.md"
packages = [{include = "labwatching", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
