[tool.poetry]
name = "labwatching"
version = "0.1.0"
description = ""
authors = ["samrelyveld <samrelyveld@gmail.com>"]
readme = "README.md"
packages = [{ include = "labwatching", from = "src" }]

[tool.poetry.dependencies]
python = ">3.12,<3.14"
click = ">=7.1.2,<8.0.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
pyvisa = "^1.14.1"
matplotlib = "^3.9.2"
pyvisa-py = "^0.7.2"
pyserial = "^3.5"
pyside6 = "^6.8.0.2"
pyqtgraph = "^0.13.7"
slot = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
